# coffee_grinder_project

./: #CMakeLists.txt#  #cof.c#  .#cof.c  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  cof.c  cof.c~  debug.sh  emacs config  tiva_tm4c123_toolchain.cmake
TivaWare_C_Series-2.2.0.295/driverlib/gcc/: adc.d  aes.d  can.d  comp.d  cpu.d  crc.d  des.d  eeprom.d  emac.d  epi.d  flash.d  fpu.d  gpio.d  hibernate.d  i2c.d  interrupt.d  lcd.d  mpu.d  onewire.d  pwm.d  qei.d  shamd5.d  ssi.d  sw_crc.d  sysctl.d  sysexc.d  systick.d  timer.d  uart.d  udma.d  usb.d  watchdog.d
TivaWare_C_Series-2.2.0.295/grlib/gcc/: canvas.d  charmap.d  checkbox.d  circle.d  container.d  context.d  fontcm12.d  fontcm12b.d  fontcm12i.d  fontcm14.d  fontcm14b.d  fontcm14i.d  fontcm16.d  fontcm16b.d  fontcm16i.d  fontcm18.d  fontcm18b.d  fontcm18i.d  fontcm20.d  fontcm20b.d  fontcm20i.d  fontcm22.d  fontcm22b.d  fontcm22i.d  fontcm24.d  fontcm24b.d  fontcm24i.d  fontcm26.d  fontcm26b.d  fontcm26i.d  fontcm28.d  fontcm28b.d  fontcm28i.d  fontcm30.d  fontcm30b.d  fontcm30i.d  fontcm32.d  fontcm32b.d  fontcm32i.d  fontcm34.d  (+133 more)
TivaWare_C_Series-2.2.0.295/sensorlib/gcc/: ak8963.d  ak8975.d  bmp180.d  bq27510g3.d  cm3218.d  comp_dcm.d  i2cm_drv.d  isl29023.d  kxti9.d  l3gd20h.d  lsm303d.d  lsm303dlhc_accel.d  lsm303dlhc_mag.d  magneto.d  mpu6050.d  mpu9150.d  quaternion.d  sht21.d  tmp006.d  tmp100.d
driver/: Makefile
driver/driverlib/: Makefile
objs/: coffeebinary.axf  coffeebinary.lss  coffeebinary.map
objs/src/: cof.d
objs/sys/: startup_gcc.d
src/: cof.c
sys/: startup_gcc.c
(+468 files in other folders)
